Usunięcie osobnego pliku biblioteki klas ShutdownManager.cs Utworzenie klasy Events w pliku form.cs

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Shutdown_8/Nowy_kod.pdf
+/Shutdown_8/Library_shutdown.pdf
+/Shutdown_8/kod_shutdown.pdf
