Usunięcie osobnego pliku biblioteki klas ShutdownManager.cs Utworzenie klasy Events w pliku form.cs

--- a/Shutdown_8/Planner Akcji.csproj
+++ b/Shutdown_8/Planner Akcji.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ShutdownManager.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="icons8-power-70.ico" />
   </ItemGroup>
 
